--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
         ex ea commodo consequat.</string>
     <string name="imgPhoto">Photo</string>
+    <string name="tvFavorite">Favorit</string>
+    <string name="tvShare">Share</string>
 
     <!--Menu-->
     <string name="menuList">List</string>
